spacing issues on mobile

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
 html {
   scroll-behavior: smooth;
 }
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .badges-mobile,
 .mobiledropdown {
@@ -165,6 +170,10 @@ p {
 #personalLinks a:hover {
   transform: scale(1.2);
 }
+.linkdiv {
+  width: 89%;
+  gap: 6%;
+}
 
 #right-wrapper {
   height: 100%;
@@ -238,6 +247,7 @@ h3 {
   font-weight: bold;
   padding: 0;
   margin-bottom: 8px;
+  margin-top: 5px;
 }
 
 .page-wrapper {
@@ -258,7 +268,7 @@ h3 {
 /*slideshow */
 
 #slideshow {
-  width: 100%;
+  /* width: 100%; */
   height: calc(50vw * 0.6);
   /* margin-bottom: 40px; */
 }
@@ -343,6 +353,13 @@ h3 {
 
 #description {
   margin-top: 10px;
+}
+
+.linksandhomecontainer {
+  display: flex;
+  margin-bottom: 50px;
+  margin-top: 3px;
+  align-items: center;
 }
 
 .sketch {
@@ -635,7 +652,11 @@ a:not(.btn--remix):visited {
   .badges-desktop {
     display: none;
   }
-
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
   .badges-mobile {
     display: flex;
     justify-content: flex-end;
@@ -705,7 +726,23 @@ a:not(.btn--remix):visited {
   #projectbody {
     width: 94vw;
     padding: 0;
-    margin: 0vw 3vw 0vw 3vw;
+    margin: 3vw 5vw 0vw 5vw;
+  }
+  .linkdiv,
+  .linksandhomecontainer {
+    flex-direction: column;
+    margin-top: 4px;
+    align-items: flex-start;
+  }
+  .linkdiv {
+    gap: 10px;
+    margin-bottom: 10px;
+  }
+
+  #slideshow {
+    /* width: 100%; */
+    height: calc(50vw * 0.8);
+    /* margin-bottom: 40px; */
   }
 }
 /*END OF MOBILE STYLING */
